--- a/client/fruits/admin.fruits.view.html
+++ b/client/fruits/admin.fruits.view.html
@@ -39,7 +39,7 @@
 <div class="container">
     <div ng-if="showFruit">
         <div class="form-group">
-            <button id="editFruit" data-egg-id="" class="btnEdit btn btn-primary">Edit</button><br><br>
+            <button id="editFruit" ng-click="editFruit()" data-egg-id="" class="btnEdit btn btn-primary">Edit</button><br><br>
         </div>
         <div class="form-group">
             <div class="col-sm-offset-10 col-sm-2">
