added cancel button to  edit form
added fruit preview template

--- a/client/fruits/admin.fruits.form.html
+++ b/client/fruits/admin.fruits.form.html
@@ -21,6 +21,7 @@
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
                 <button ng-click="saveFruit()" class="btnAdd btn btn-primary" value="add" id="createFruit">Save</button>
+                <button ng-click="closeForm()" class="btnAdd btn btn-primary" value="add" >Cancel</button>
             </div>
         </div>
     </form>
