--- a/client/fruits/admin.fruits.view.html
+++ b/client/fruits/admin.fruits.view.html
@@ -36,26 +36,8 @@
     </table>
 </div>
 
-<div class="container">
-    <div ng-if="showFruit">
-        <div class="form-group">
-            <button id="editFruit" ng-click="editFruit()" data-egg-id="" class="btnEdit btn btn-primary">Edit</button><br><br>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-10 col-sm-2">
-                <button id="addFruit" data-egg-id="" class="btnAdd btn btn-primary">Add</button><br><br>
-            </div>
-        </div>
-        <h2>Product Content:</h2> <br>
-        <img src="../uploads/{{fruit.image}}" height="125">
-        <div class="pull-right">
-            <h6>Name: {{fruit.name}}</h6><br>
-            <h6>Price: {{fruit.price | currency}}</h6>
-        </div>
-    </div>
-    <div ng-else>
-        <h1>Products: {{fruits.length}}</h1>
-    </div>
+<div class="container" ng-include="'fruits/admin.fruits.preview.html'">
+
 </div>
 
 <!-- <div class="container">
