--- a/client/auth/registerForm.html
+++ b/client/auth/registerForm.html
@@ -1,4 +1,3 @@
-
 <div id="registrForm" class="col-md-offset-4 col-md-5">
 
     <form id="frmLogin" name="frmLogin" oninput="result.value=!!userPasswordConfirm.value&&(userPassword.value==userPasswordConfirm.value)?'':'Fields must match'">
@@ -96,10 +95,13 @@
             <input  type="hidden"  name="ctrl" value="login" >
             <div class="wrapper">
             <span class="group-btn">
-                <button class="btn btn-primary btn-md" ng-click="register(user)" type="button"
+                <button class="btn btn-primary btn-md" ng-click="register(user)" type="button">back<i class="fa fa-sign-in"></i></button>
+            </span>
+            <span class="group-btn">
+                <button class="btn btn-primary btn-md pull-right" ng-click="register(user)" type="button"
                         ng-disabled="frmLogin.userCity.$invalid || frmLogin.userStreet.$invalid || frmLogin.userName.$invalid || frmLogin.userLastName.$invalid">save<i class="fa fa-sign-in"></i></button>
             </span>
-            <span class="pull-right text-danger">{{serverError}}</span>
+            <span class="text-danger">{{serverError}}</span>
             </div>
         </div>
     </fieldset>
