--- a/client/auth/registerForm.html
+++ b/client/auth/registerForm.html
@@ -95,7 +95,7 @@
             <input  type="hidden"  name="ctrl" value="login" >
             <div class="wrapper">
             <span class="group-btn">
-                <button class="btn btn-primary btn-md" ng-click="showRegisterFormStep1()" type="button">back<i class="fa fa-sign-in"></i></button>
+                <button class="btn btn-primary btn-md" ng-click="showRegisterFormStep1(true)" type="button">back<i class="fa fa-sign-in"></i></button>
             </span>
             <span class="group-btn">
                 <button class="btn btn-primary btn-md pull-right" ng-click="register(user)" type="button"
