--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,7 @@
         <script src="service.js"></script>
 
         <script src="auth/auth.controller.js"></script>
+        <script src="cart/cart.controller.js"></script>
         <script src="fruits/fruits.controller.js"></script>
 
         <script src='filter.js'></script>
