--- a/client/fruits/fruits.view.html
+++ b/client/fruits/fruits.view.html
@@ -11,29 +11,47 @@
             </div>
         </div>
     </nav>
-    <table class='table table-hover table-responsive table-bordered'>
-        <tr>
-            <th class="danger">image</th>
-            <th class="danger">name</th>
-            <th class="danger">price</th>
-        </tr>
-        <tr class="info fruit-item" data-name="{{fruit.name}}" data-price="{{fruit.price}}" data-fid="{{fruit.id}}" id="fruit-{{fruit.id}}" ng-repeat="fruit in fruits" ng-click="showFruitPopup(categoryName, fruit.id)">
-            <td>
+    <!--<table class='table table-hover table-responsive table-bordered'>-->
+        <!--<tr>-->
+            <!--<th class="danger">image</th>-->
+            <!--<th class="danger">name</th>-->
+            <!--<th class="danger">price</th>-->
+        <!--</tr>-->
+        <!--<tr class="info fruit-item" data-name="{{fruit.name}}" data-price="{{fruit.price}}" data-fid="{{fruit.id}}" id="fruit-{{fruit.id}}" ng-repeat="fruit in fruits" ng-click="showFruitPopup(categoryName, fruit.id)">-->
+            <!--<td>-->
+                <!--<div ng-if="fruit.image">-->
+                    <!--<img src="../uploads/{{fruit.image}}" height="25">-->
+                <!--</div>-->
+                <!--<div  ng-else>-->
+                    <!--<img src="../uploads/no-image.png" height="25">-->
+                <!--</div>-->
+            <!--</td>-->
+            <!--<td>-->
+                <!--{{fruit.name}}-->
+            <!--</td>-->
+            <!--<td>-->
+                <!--{{fruit.price | currency}}-->
+            <!--</td>-->
+        <!--</tr>-->
+    <!--</table>-->
+
+    <div class="row">
+        <div class="col-xs-18 col-sm-6 col-md-3">
+            <div class="thumbnail fruit-item media-body" data-name="{{fruit.name}}" data-price="{{fruit.price}}" data-fid="{{fruit.id}}" id="fruit-{{fruit.id}}" ng-repeat="fruit in fruits" ng-click="showFruitPopup(categoryName, fruit.id)">
                 <div ng-if="fruit.image">
-                    <img src="../uploads/{{fruit.image}}" height="25">
+                    <img src="../uploads/{{fruit.image}}" height="100">
                 </div>
                 <div  ng-else>
-                    <img src="../uploads/no-image.png" height="25">
+                    <img src="../uploads/no-image.png" height="100">
                 </div>
-            </td>
-            <td>
-                {{fruit.name}}
-            </td>
-            <td>
-                {{fruit.price | currency}}
-            </td>
-        </tr>
-    </table>
+                <div class="caption">
+                    <h4 class="text-center">{{fruit.name}}</h4>
+                    <p class="text-center">{{fruit.price | currency}}</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 <div class="container">
