--- a/client/cart/cart.order.view.html
+++ b/client/cart/cart.order.view.html
@@ -1,10 +1,10 @@
-<div id="cart" ng-controller="cartCtrl">cart:
+<div id="cart">cart:
+    <button class="btn btn-primary btn-md" ng-click="goToShopPage()" type="button">back to shop</button>
+
 
     <div class="info fruit-item" ng-repeat="fruit in cartFruits">
         <td>
             Q: {{fruit.quantity}} Price: {{fruit.price | currency}}
         </td>
     </div>
-
-    <button class="btn btn-primary btn-md" ng-click="goToOrderStep()" type="button">Order<i class="fa fa-sign-in"></i></button>
 </div>
