--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
         <script src="auth/auth.controller.js"></script>
         <script src="cart/cart.controller.js"></script>
         <script src="fruits/fruits.controller.js"></script>
+        <script src="order/order.controller.js"></script>
 
         <script src='filter.js'></script>
         <script src="config.js"></script>
