--- a/client/cart/cart.view.html
+++ b/client/cart/cart.view.html
@@ -2,7 +2,7 @@
 
     <div class="info fruit-item" ng-repeat="fruit in cartFruits">
         <td>
-            Q: {{fruit.quantity}} Price: {{fruit.price | currency}}
+            Quantity: {{fruit.quantity}} Price: {{fruit.price | currency}}
         </td>
     </div>
 
