sharing added fruit between fruit and cart service

--- a/client/cart/cart.view.html
+++ b/client/cart/cart.view.html
@@ -2,7 +2,7 @@
 
     <div class="info fruit-item" ng-repeat="fruit in cartFruits">
         <td>
-            Quantity: {{fruit.quantity}} Price: {{fruit.price | currency}}
+            Quantity: {{fruit.quantity}} Price: {{fruit.price | currency}} Name: {{fruit.name}} ID: {{fruit.product}}
         </td>
     </div>
 
