--- a/client/cart/cart.view.html
+++ b/client/cart/cart.view.html
@@ -1,10 +1,10 @@
-<div id="cart" ng-controller="cartCtrl">cart:
+<div id="cart" ng-controller="cartCtrl"><h3>Cart:</h3>
 
     <div class="info fruit-item" ng-repeat="fruit in cartFruits">
         <td>
             Quantity: {{fruit.quantity}} Price: {{fruit.price | currency}} Name: {{fruit.name}} ID: {{fruit.product}}
         </td>
     </div>
-
+    <br>
     <button class="btn btn-primary btn-md" ng-click="goToOrderStep()" type="button">Order<i class="fa fa-sign-in"></i></button>
 </div>
