--- a/client/fruits/admin.fruits.preview.html
+++ b/client/fruits/admin.fruits.preview.html
@@ -1,11 +1,7 @@
 <div ng-if="showFruit">
     <div class="form-group">
-        <button id="editFruit" ng-click="editFruit()" data-egg-id="" class="btnEdit btn btn-primary">Edit</button><br><br>
-    </div>
-    <div class="form-group">
-        <div class="col-sm-offset-10 col-sm-2">
-            <button id="addFruit" data-egg-id="" class="btnAdd btn btn-primary">Add</button><br><br>
-        </div>
+        <button ng-click="editFruit()" class="btn btn-primary pull-left">Edit</button>
+        <button class="btn btn-primary pull-right">Add</button><br><br>
     </div>
     <h2>Product Content:</h2> <br>
     <img src="../uploads/{{fruit.image}}" height="125">
