--- a/client/fruits/admin.fruits.form.html
+++ b/client/fruits/admin.fruits.form.html
@@ -1,4 +1,4 @@
-    <h2>Edit Fruit</h2>
+    <h2>Edit Product</h2>
     <form class="form-horizontal" name="addFruitForm" id="addFruitForm" method="{{method}}" enctype="multipart/form-data">
         <div class="form-group">
             <label class="control-label col-sm-2" for="fruitName">Name:</label>
@@ -7,9 +7,9 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="control-label col-sm-2" for="fruitPhone">Price:</label>
+            <label class="control-label col-sm-2" for="fruitPrice">Price:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control" id="fruitPhone" placeholder="Enter phone" name="phone" required ng-model="fruitEdited.price">
+                <input type="text" class="form-control" id="fruitPrice" placeholder="Enter price" name="phone" required ng-model="fruitEdited.price">
             </div>
         </div>
         <div class="form-group">
@@ -20,8 +20,8 @@
         </div>
         <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
-                <button ng-click="saveFruit()" class="btnAdd btn btn-primary" value="add" id="createFruit">Save</button>
-                <button ng-click="closeForm()" class="btnAdd btn btn-primary" value="add" >Cancel</button>
+                <button ng-click="saveFruit()" class="btnAdd btn btn-primary">Save</button>
+                <button ng-click="closeForm()" class="btnAdd btn btn-primary pull-right">Cancel</button>
             </div>
         </div>
     </form>
