--- a/client/fruits/admin.fruits.view.html
+++ b/client/fruits/admin.fruits.view.html
@@ -3,10 +3,10 @@
         <div id = "categories-menu" class="menu">
             <div class="container-fluid">
                 <div class="navbar-header">
-                    <a id="eggs-link" href="#!/admin/category/eggs">Milk & Eggs</a>
-                    <a id="fruits-link" href="#!/admin/category/fruits">Vegetables & Fruits</a>
-                    <a id="fishes-link" href="#!/admin/category/fishes">Meat & Fish</a>
-                    <a id="drinks-link" href="#!/admin/category/drinks">Wine & Drinks</a>
+                    <a ng-class="categoryName == 'eggs' ? 'active' : ''" id="eggs-link" href="#!/admin/category/eggs">Milk & Eggs</a>
+                    <a ng-class="categoryName == 'fruits' ? 'active' : ''" id="fruits-link" href="#!/admin/category/fruits">Vegetables & Fruits</a>
+                    <a ng-class="categoryName == 'fishes' ? 'active' : ''" id="fishes-link" href="#!/admin/category/fishes">Meat & Fish</a>
+                    <a ng-class="categoryName == 'drinks' ? 'active' : ''" id="drinks-link" href="#!/admin/category/drinks">Wine & Drinks</a>
                 </div>
             </div>
         </div>
