--- a/client/fruits/admin.fruits.preview.html
+++ b/client/fruits/admin.fruits.preview.html
@@ -1,7 +1,7 @@
 <div ng-if="showFruit">
     <div class="form-group">
         <button ng-click="editFruit()" class="btn btn-primary pull-left">Edit</button>
-        <button class="btn btn-primary pull-right">Add</button><br><br>
+        <button ng-click="addFruit()" class="btn btn-primary pull-right">Add</button><br><br>
     </div>
     <h2>Product Content:</h2> <br>
     <img src="../uploads/{{fruit.image}}" height="125">
