--- a/client/fruits/admin.fruits.preview.html
+++ b/client/fruits/admin.fruits.preview.html
@@ -4,7 +4,13 @@
         <button ng-click="addFruit()" class="btn btn-primary pull-right">Add</button><br><br>
     </div>
     <h2>Product Content:</h2> <br>
-    <img src="../uploads/{{fruit.image}}" height="125">
+    <div class="pull-left" ng-if="fruit.image">
+        <img src="../uploads/{{fruit.image}}" height="125">
+    </div>
+    <div class="pull-left" ng-else>
+        <img src="../uploads/no-image.png" height="125">
+    </div>
+    <!--<img src="../uploads/{{fruit.image}}" height="125">-->
     <div class="pull-right">
         <h6>Name: {{fruit.name}}</h6><br>
         <h6>Price: {{fruit.price | currency}}</h6>
