--- a/client/fruits/admin.fruits.form.html
+++ b/client/fruits/admin.fruits.form.html
@@ -26,7 +26,8 @@
         <div class="form-group">
             <label class="control-label col-sm-2" for="fruitImage">Image:</label>
             <div class="col-sm-10">
-                <input type="file" class="form-control" id="fruitImage" name="image" accept="image/jpg, image/jpeg, image/png, image/gif">
+                <input type="file" id="file" class="form-control" id="fruitImage" accept="image/jpg, image/jpeg, image/png, image/gif">
+                <span>Only images, max file size = 45KB</span>
             </div>
         </div>
         <div class="form-group">
