--- a/client/cart/cart.view.html
+++ b/client/cart/cart.view.html
@@ -1,11 +1,11 @@
 <div id="cart" ng-controller="cartCtrl"><h3>Cart:</h3>
 
     <div class="info fruit-item" ng-repeat="cartFruit in cartFruits">
-        <td>
+        <span class="list-group-item list-group-item-info">
             Quantity: {{cartFruit.quantity}} Price: {{cartFruit.price | currency}} Name: {{cartFruit.name}} ID: {{cartFruit.product}}
             <span class="glyphicon glyphicon-remove-circle" ng-click="deleteFruit(cartFruit.id)"></span>
-        </td>
+        </span>
     </div>
     <br>
-    <button class="btn btn-primary btn-md" ng-click="goToOrderStep()" type="button">Order<i class="fa fa-sign-in"></i></button>
+    <button class="btn btn-primary btn-md" ng-click="goToOrderStep()" type="button">Order</button>
 </div>
