--- a/client/cart/order.view.html
+++ b/client/cart/order.view.html
@@ -2,8 +2,8 @@
 
 
     <div class="row">
-        <div class="col-xs-18 col-sm-6 col-md-3">
-            <div class="thumbnail fruit-item media-body">
+        <div class="col-xs-12 col-sm-10 col-md-9">
+            <div id="frmOrder" class="thumbnail fruit-item media-body">
                 <div ng-include="'cart/orderForm.html'"></div>
             </div>
         </div>
