--- a/client/cart/order.view.html
+++ b/client/cart/order.view.html
@@ -1,16 +1,16 @@
-<div id="resultFruit">
+<!--<div id="resultFruit">-->
 
 
-    <div class="row">
-        <div class="col-xs-12 col-sm-10 col-md-9">
-            <div id="frmOrder" class="thumbnail fruit-item media-body">
-                <div ng-include="'cart/orderForm.html'"></div>
-            </div>
-        </div>
-    </div>
+    <!--<div class="row">-->
+        <!--<div class="col-xs-12 col-sm-10 col-md-9">-->
+            <!--<div id="frmOrder" class="thumbnail fruit-item media-body">-->
+                <!--<div ng-include="'cart/orderForm.html'"></div>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
 
-</div>
+<!--</div>-->
 
-<div class="container">
-    <div ng-include="'cart/cart.order.view.html'"></div>
-</div>
+<!--<div class="container">-->
+    <!--<div ng-include="'cart/cart.order.view.html'"></div>-->
+<!--</div>-->
