--- a/client/order/order.view.html
+++ b/client/order/order.view.html
@@ -2,9 +2,9 @@
 
 
     <div class="row">
-        <div class="col-xs-18 col-sm-6 col-md-3">
-            <div class="thumbnail fruit-item media-body">
-                <div ng-include="'cart/orderForm.html'"></div>
+        <div class="col-xs-12 col-sm-10 col-md-9">
+            <div id="frmOrder" class="thumbnail fruit-item media-body">
+                <div ng-include="'order/orderForm.html'"></div>
             </div>
         </div>
     </div>
