--- a/client/order/orderForm.html
+++ b/client/order/orderForm.html
@@ -3,7 +3,7 @@
     <fieldset>
         <legend><h4>Shipping details:</h4></legend>
         <div class="form-group row">
-            <label for="deliveryCity" class="col-md-offset-1 col-sm-2 control-label">City</label>
+            <label for="deliveryCity" class="col-md-offset-1 col-sm-2 control-label required-field">City</label>
             <div class="col-sm-8">
                 <select ng-model="order.delivery_city" class="form-control input-sm chat-input margin_bottom" id="deliveryCity" name="deliveryCity" placeholder="City" required>
                     <option>Jerusalem</option>
@@ -20,30 +20,26 @@
             </div>
         </div>
         <div class="form-group row">
-            <label for="deliveryStreet" class="col-md-offset-1 col-sm-2 control-label">Street</label>
+            <label for="deliveryStreet" class="col-md-offset-1 col-sm-2 control-label required-field">Street</label>
             <div class="col-sm-8">
                 <input ng-model="order.delivery_street" type="text" id="deliveryStreet" name="deliveryStreet" class="form-control input-sm chat-input margin_bottom"
                        placeholder="Street" required>
             </div>
         </div>
         <div class="form-group row">
-            <label for="shippingDate" class="col-md-offset-1 col-sm-2 control-label">Shipping Date</label>
+            <label for="shippingDate" class="col-md-offset-1 col-sm-2 control-label required-field">Shipping Date</label>
             <div class="col-xs-8 date">
                 <div class="input-group input-append date" id="shippingDate">
                     <input ng-model="order.delivery_date" type="date" class="form-control input-sm chat-input margin_bottom" name="shippingDate">
                     <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                 </div>
             </div>
-            <!--<div class="col-sm-8">-->
-                <!--<input ng-model="order.delivery_date" type="text" id="shippingDate" name="shippingDate" class="form-control input-sm chat-input margin_bottom"-->
-                       <!--placeholder="Shipping Date" required>-->
-            <!--</div>-->
         </div>
     </fieldset>
     <fieldset>
         <legend><h4>Payments:</h4></legend>
         <div class="form-group row">
-            <label for="creditCard" class="col-md-offset-1 col-sm-2 control-label">Credit Card</label>
+            <label for="creditCard" class="col-md-offset-1 col-sm-2 control-label required-field">Credit Card</label>
             <div class="col-sm-8">
                 <input ng-model="order.credit_card" type="number" id="creditCard" name="creditCard" class="form-control input-sm chat-input margin_bottom"
                        placeholder="Credit Card" required>
