--- a/client/order/orderForm.html
+++ b/client/order/orderForm.html
@@ -25,7 +25,7 @@
         <div class="form-group row">
             <label for="deliveryStreet" class="col-md-offset-1 col-sm-2 control-label required-field">Street</label>
             <div class="col-sm-8">
-                <input ng-model="order.delivery_street" type="text" id="deliveryStreet" name="deliveryStreet" class="form-control input-sm chat-input margin_bottom"
+                <input ng-dblclick="getStreet()" ng-model="order.delivery_street" type="text" id="deliveryStreet" name="deliveryStreet" class="form-control input-sm chat-input margin_bottom"
                        placeholder="Street" required>
             </div>
         </div>
