--- a/client/fruits/admin.fruits.add.html
+++ b/client/fruits/admin.fruits.add.html
@@ -26,7 +26,7 @@
     <div class="form-group">
         <label class="control-label col-sm-2" for="fruitImage">Image:</label>
         <div class="col-sm-10">
-            <input type="file" class="form-control" id="fruitImage" name="image" accept="image/jpg, image/jpeg, image/png, image/gif">
+            <input id="AddFile" type="file" class="form-control" id="fruitImage" name="image" accept="image/jpg, image/jpeg, image/png, image/gif">
         </div>
     </div>
     <div class="form-group">
