--- a/client/order/order.message.view.html
+++ b/client/order/order.message.view.html
@@ -1,6 +1,6 @@
 <div id="message" class="col-md-4 col-md-offset-4 row vertical-center-row text-center">
     <h2>Your order has been placed successfully!</h2>
-    <h3>To take your bill click <a href="#"><i>here</i></a></h3><br>
+    <h3>To take your bill click <a href="download"><i>here</i></a></h3><br>
     <span class="group-btn">
         <button class="btn btn-primary center-block" ng-click="goToMain()" type="button">OK</button>
     </span>
