--- a/client/fruits/fruits.view.html
+++ b/client/fruits/fruits.view.html
@@ -1,3 +1,18 @@
+<form>
+    <div class="form-group row col-sm-8">
+        <label for="searchProduct" class="col-sm-2 control-label">Search product</label>
+        <div class="col-sm-4">
+            <div class="input-group">
+                <input type="search" id="searchProduct" name="searchProduct" class="form-control"
+                       placeholder="Product name">
+                <span class="input-group-addon add-on">
+                    <span class="glyphicon glyphicon-search"></span>
+                </span>
+            </div>
+        </div>
+    </div>
+</form>
+
 <div id="resultFruit">
     <nav class="navbar">
         <div id = "categories-menu" class="menu">
