--- a/client/auth/loginForm.html
+++ b/client/auth/loginForm.html
@@ -1,17 +1,17 @@
 <form id="frmLogin">
     <h3>Registered?</h3>
     <div class="form-group row">
-        <label for="userEmail" class="col-sm-3 control-label">User Email:</label>
-        <div class="col-sm-9">
-        <input ng-model="user.email" type="text" id="userEmail" name="userEmail" class="form-control input-sm chat-input margin_bottom"
-            placeholder="user email"  />
+        <label for="userEmail" class="col-sm-4 control-label">User Email:</label>
+        <div class="col-sm-8">
+            <input ng-model="user.email" type="email" id="userEmail" name="userEmail" class="form-control input-sm chat-input margin_bottom"
+                placeholder="user email">
         </div>
     </div>
     <div class="form-group row">
-        <label for="userPassword" class="col-sm-3 control-label">Password:</label>
-        <div class="col-sm-9">
+        <label for="userPassword" class="col-sm-4 control-label">Password:</label>
+        <div class="col-sm-8">
         <input ng-model="user.password" type="password" id="userPassword" name= "userPassword" class="form-control input-sm chat-input margin_bottom"
-            placeholder="password" />
+            placeholder="password">
         </div>
     </div>
     <input  type="hidden"  name="ctrl" value="login" >
