--- a/client/fruits/admin.fruits.view.html
+++ b/client/fruits/admin.fruits.view.html
@@ -1,3 +1,18 @@
+<form>
+    <div class="form-group row col-sm-8">
+        <label for="searchProduct" class="col-sm-2 control-label">Search product</label>
+        <div class="col-sm-4">
+            <div class="input-group">
+                <input type="search" id="searchProduct" name="searchProduct" class="form-control"
+                       placeholder="Product name">
+                <span class="input-group-addon add-on">
+                    <span class="glyphicon glyphicon-search"></span>
+                </span>
+            </div>
+        </div>
+    </div>
+</form>
+
 <div id="resultFruit">
     <nav class="navbar">
         <div id = "categories-menu" class="menu">
@@ -34,44 +49,3 @@
 <div class="container" ng-include="'fruits/admin.fruits.preview.html'">
 
 </div>
-
-<!-- <div class="container">
-    <h2>Create Fruit</h2>
-    <form class="form-horizontal" name="addFruitForm" id="addFruitForm" action="../api/api.php" method="{{method}}" enctype="multipart/form-data">
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="fruitName">Name:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="fruitName" placeholder="Enter name" name="name" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="fruitPhone">Phone:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="fruitPhone" placeholder="Enter phone" name="phone" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="email">Email:</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" id="email" placeholder="Enter email" name="email" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="fruitRole">Role:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="fruitRole" placeholder="Enter role" name="role" required>
-            </div>
-        </div>
-        <div class="form-group">
-            <label class="control-label col-sm-2" for="fruitImage">Image:</label>
-            <div class="col-sm-10">
-                <input type="file" class="form-control" id="fruitImage" name="image" accept="image/jpg, image/jpeg, image/png, image/gif">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btnAdd btn btn-primary" value="add" id="createFruit" name="action">Save</button>
-            </div>
-        </div>
-    </form>
-</div> -->
