--- a/client/order/orderForm.html
+++ b/client/order/orderForm.html
@@ -2,7 +2,7 @@
     <h3 class="text-center">Order</h3>
     <fieldset>
         <legend><h4>Shipping details:</h4></legend>
-        <h5 class="text-center"><i>You can double-click on city and street to get it</i></h5><br>
+        <h5 class="text-center"><i>You can double-click on city and street to get them</i></h5><br>
         <div class="form-group row">
             <label for="deliveryCity" class="col-md-offset-1 col-sm-2 control-label required-field">City</label>
             <div class="col-sm-8">
