--- a/client/order/order.view.html
+++ b/client/order/order.view.html
@@ -3,7 +3,7 @@
         <label for="searchProduct" class="col-sm-2 control-label">Search product</label>
         <div class="col-sm-4">
             <div class="input-group">
-                <input type="search" id="searchProduct" name="searchProduct" class="form-control"
+                <input type="search" id="searchProduct" name="searchProduct" class="form-control" ng-model="search.text"
                        placeholder="Product name">
                 <span class="input-group-addon add-on">
                     <span class="glyphicon glyphicon-search"></span>
