--- a/client/fruits/fruits.view.html
+++ b/client/fruits/fruits.view.html
@@ -46,6 +46,6 @@
 
 </div>
 
-<div class="container">
+<div id="element" class="container">
     <div ng-include="'cart/cart.view.html'"></div>
 </div>
