categories - to db, adding product fix

--- a/client/fruits/admin.fruits.add.html
+++ b/client/fruits/admin.fruits.add.html
@@ -9,11 +9,8 @@
     <div class="form-group">
         <label class="control-label col-sm-2" for="fruitCategory">Category:</label>
         <div class="col-sm-10">
-            <select class="form-control" id="fruitCategory" name="fruitCategory" ng-model="fruitAdded.category" required>
-                <option value="1">Milk & Eggs</option>
-                <option value="2">Vegetables & Fruits</option>
-                <option value="3">Meat & Fish</option>
-                <option value="4">Wine & Drinks</option>
+            <select class="form-control" name="fruitCategory" id="fruitCategory">
+                <option ng-selected="fruitAdded.category == category.id ? 'selected' : ''" value="{{category.id}}" ng-repeat="category in categories">{{category.name}}</option>
             </select>
         </div>
     </div>
