--- a/client/fruits/admin.fruits.preview.html
+++ b/client/fruits/admin.fruits.preview.html
@@ -17,5 +17,6 @@
     </div>
 </div>
 <div ng-else>
+    <button ng-click="addFruit()" class="btn btn-primary pull-right">Add</button>
     <h1>Products: {{fruits.length}}</h1>
 </div>
