added total sum

--- a/client/cart/cart.order.view.html
+++ b/client/cart/cart.order.view.html
@@ -7,4 +7,7 @@
                 Name: <span ng-bind-html="fruit.name | highlight:search.text"></span> Quantity: {{fruit.quantity}} Price: {{fruit.price | currency}}
         </span>
     </div>
+    <br>
+    Total sum: {{ totalSum }}
+    <br>
 </div>
