--- a/client/cart/cart.view.html
+++ b/client/cart/cart.view.html
@@ -7,6 +7,8 @@
         </span>
     </div>
     <br>
+    Total sum: {{ totalSum }}
+    <br>
     <button class="btn btn-primary btn-md" ng-click="deleteAllFruits()" type="button">Delete All</button>
     <button class="btn btn-primary btn-md pull-right" ng-click="goToOrderStep()" type="button">Order</button>
 </div>
