--- a/client/cart/cart.view.html
+++ b/client/cart/cart.view.html
@@ -7,7 +7,7 @@
         </span>
     </div>
     <br>
-    Total sum: {{ totalSum }}
+    <span class="text-center center-block">Total sum: {{ totalSum | currency }}</span>
     <br>
     <button class="btn btn-primary btn-md" ng-click="deleteAllFruits()" type="button">Delete All</button>
     <button class="btn btn-primary btn-md pull-right" ng-click="goToOrderStep()" type="button">Order</button>
