--- a/client/fruits/admin.fruits.view.html
+++ b/client/fruits/admin.fruits.view.html
@@ -24,9 +24,9 @@
         </div>
     </nav>
 
-    <div class="row">
-        <div class="col-xs-18 col-sm-6 col-md-3">
-            <div class="thumbnail fruit-item media-body" ng-repeat="fruit in fruits | filter:search" ng-click="goToFruit(categoryName, fruit.id)">
+    <!--<div class="row">-->
+        <!--<div class="col-xs-18 col-sm-6 col-md-3">-->
+            <div class="thumbnail fruit-item col-md-2" ng-repeat="fruit in fruits | filter:search" ng-click="goToFruit(categoryName, fruit.id)">
                 <div class="text-center" ng-if="fruit.image">
                     <img src="../uploads/{{fruit.image}}" height="120">
                 </div>
@@ -38,8 +38,8 @@
                     <p class="text-center">{{fruit.price | currency}}</p>
                 </div>
             </div>
-        </div>
-    </div>
+        <!--</div>-->
+    <!--</div>-->
 
 </div>
 
